QOL changes
Viewport settings, movement, building, hotbar, layer moving rotation,